audit: fix 13 backend issues found against problem statement PDFs
CRITICAL FIXES:
- pom.xml: replace nonexistent spring-boot-starter-*-test deps with
  spring-boot-starter-test + spring-security-test; downgrade from
  nonexistent 4.1.1 to stable 3.3.2; fix spring-boot-starter-webmvc
  -> spring-boot-starter-web (BUILD was broken)
- TripController: add PUT /{id} (update trip) - was missing
- TripController: add POST /{id}/share and POST /{id}/unshare
  for trip sharing feature
- TripController: add @Transactional on budget endpoint to fix
  LazyInitializationException on stop/activity lazy collections
- StopController: add PUT /{stopId} (update stop) - was missing
- StopController: fix 403->404 when trip not found
- ActivityController: add PUT /{activityId} (update activity) - was missing
- ActivityController: fix 403->404 when stop not found
- AuthController: add GET /api/auth/me (current user profile)
- AuthController: add @Valid on signup request

NEW FILES:
- model/City.java: city catalog entity
- model/Trip.java: add isPublic + shareToken fields for sharing
- dto/CityResponse.java: city search response DTO
- dto/UserProfileResponse.java: user profile DTO
- dto/TripResponse.java: add stopCount, isPublic, shareToken fields
- dto/TripRequest.java: add @NotBlank/@Size validation
- dto/StopRequest.java: add @NotBlank/@Size validation
- dto/ActivityRequest.java: add @NotBlank/@Size validation
- dto/SignupRequest.java: add @NotBlank/@Email/@Size validation
- repository/CityRepository.java: city search queries
- repository/TripRepository.java: add findByShareToken
- controller/SharedTripController.java: GET /api/shared/{token}
  (public, no auth) + POST /api/shared/{token}/copy (auth required)
- controller/CityController.java: GET /api/cities?search=&country=
- exception/GlobalExceptionHandler.java: JSON error responses
  for validation, auth, and generic 500 errors
- security/SecurityConfig.java: whitelist GET /api/cities/**,
  add Vite port 5173 to CORS, add PATCH to 