@@ -2,6 +2,7 @@ package com.odoo.globetrotter.security;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
@@ -11,7 +12,9 @@ import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+
 import java.util.Arrays;
+import java.util.List;
 
 import static org.springframework.security.config.Customizer.withDefaults;
 
@@ -22,13 +25,18 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
             .cors(withDefaults())
-            .csrf(csrf -> csrf.disable()) // Disabled for hackathon simplicity, consider enabling for prod
+            .csrf(csrf -> csrf.disable()) // Disabled for hackathon; re-enable for production
             .authorizeHttpRequests(auth -> auth
+                // Auth endpoints — public
                 .requestMatchers("/api/auth/**").permitAll()
-                .requestMatchers("/api/shared/**").permitAll()
+                // Shared trip view — public (read-only)
+                .requestMatchers(HttpMethod.GET, "/api/shared/**").permitAll()
+                // City catalog — public browsing
+                .requestMatchers(HttpMethod.GET, "/api/cities/**").permitAll()
+                // All other endpoints require authentication
                 .anyRequest().authenticated()
             )
-            .httpBasic(withDefaults()); // Using standard session-based auth
+            .httpBasic(withDefaults()); // Session-based via JSESSIONID cookie
 
         return http.build();
     }
@@ -46,10 +54,16 @@ public class SecurityConfig {
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Allow the frontend dev server to connect
-        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://127.0.0.1:5500", "http://localhost:5500"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("*"));
+        // Allow common frontend dev server ports
+        configuration.setAllowedOrigins(Arrays.asList(
+            "http://localhost:3000",
+            "http://localhost:5173",  // Vite default
+            "http://localhost:5500",
+            "http://127.0.0.1:5500",
+            "http://127.0.0.1:3000"
+        ));
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
